--- a/SpringBootJPA/src/main/resources/application.properties
+++ b/SpringBootJPA/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.show-sql=true
+
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jackson.serialization.indent_output=false
